<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <TextView android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:textSize="@dimen/text_size_small"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <ImageView android:id="@+id/app_icon"
            android:layout_width="@dimen/picture_width_small"
            android:layout_height="@dimen/picture_height_small"
            android:src="@drawable/ic_transport"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="@dimen/margin_small"
                android:textSize="@dimen/text_size_small"
                android:text="@string/version"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@color/color_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_small"
            android:text="@string/description"
            android:textSize="@dimen/text_size_small"/>

        <ProgressBar
            android:id="@+id/progress_splash"
            android:layout_width="@dimen/image_size_normal"
            android:layout_height="@dimen/image_size_normal"
            android:layout_gravity="center">
        </ProgressBar>
    </LinearLayout>
</RelativeLayout>